--- a/.vscode/inject.css
+++ b/.vscode/inject.css
@@ -1,5 +1,5 @@
 .linux {
-  font-family: "Source Code Pro", monospace !important;
+  font-family: "SF Mono", monospace !important;
 }
 
 .decorationsOverviewRuler {
