feat: add a lot of configs

--- a/.vscode/inject.css
+++ b/.vscode/inject.css
@@ -1,5 +1,5 @@
 .linux {
-  font-family: "Cartograph CF", monospace !important;
+  font-family: "Product Sans", monospace !important;
 }
 
 .decorationsOverviewRuler {
