feat: update today

--- a/.vscode/inject.css
+++ b/.vscode/inject.css
@@ -1,22 +1,10 @@
 .linux {
   font-family: "Cartograph CF", monospace !important;
+  font-weight: 300;
 }
 
 .decorationsOverviewRuler {
   width: 0 !important;
-}
-
-span.relative-current-line-number {
-  text-align: right !important;
-}
-
-span.relative-current-line-number:after {
-  content: "👉";
-  display: block;
-  position: absolute;
-  top: -1px;
-  bottom: 0;
-  right: 20px;
 }
 
 [class^="mtk"].mtki {
