--- a/.vscode/inject.css
+++ b/.vscode/inject.css
@@ -1,13 +1,13 @@
 .linux {
-  font-family: "Cartograph CF", monospace !important;
-  font-weight: 300;
+  font-family: "Input Mono", monospace !important;
 }
 
 .decorationsOverviewRuler {
   width: 0 !important;
 }
-
+/*
 [class^="mtk"].mtki {
   font-feature-settings: "ss01";
   font-family: "Cartograph CF";
 }
+*/
