feat: change font

--- a/.vscode/inject.css
+++ b/.vscode/inject.css
@@ -1,5 +1,5 @@
 .linux {
-  font-family: "Office Code Pro", monospace !important;
+  font-family: MonoLisa, monospace !important;
 }
 
 .decorationsOverviewRuler {
